<resources>

    <!-- Animes -->
    <string name="animes_title">Animes</string>
    <string name="animes_global_error">An error occurred</string>

    <!-- Listitem anime -->
    <string name="anime_add_watched_episode">+1</string>
    <string name="anime_season">%1$s %2$s</string>
    <string name="anime_kind_season">%1$s - %2$s</string>
    <string name="anime_kind_season_airing">%1$s - %2$s - Airing</string>
    <string name="anime_airing">Airing</string>
    <string name="anime_episode_progress">%1$s/%2$s</string>
    <plurals name="anime_nb_episodes">
        <item quantity="zero">%s episode</item>
        <item quantity="one">%s episode</item>
        <item quantity="other">%s episodes</item>
    </plurals>

    <!-- Anime detail -->
    <string name="anime_detail_edit_watch_status">Edit</string>
    <string name="anime_detail_watch_status_completed">Completed</string>
    <string name="anime_detail_watch_status_dropped">Dropped</string>
    <string name="anime_detail_watch_status_on_hold">On hold</string>
    <string name="anime_detail_watch_status_plan_to_watch">Plan to watch</string>
    <string name="anime_detail_watch_status_watching">Watching</string>
    <string name="anime_detail_episodes_progress">%s/%s episodes</string>
    <string name="anime_detail_not_in_watchlist">Not in watchlist</string>
    <plurals name="anime_detail_nb_episodes">
        <item quantity="zero">%s episode</item>
        <item quantity="one">%s episode</item>
        <item quantity="other">%s episodes</item>
    </plurals>
    <string name="anime_detail_add_to_watchlist">Add to watchlist</string>
    <string name="anime_detail_alternative_titles_title">Alternative titles</string>
    <string name="anime_detail_synopsis_title">Synopsis</string>
    <string name="anime_detail_error_add_to_watchlist_failed">Add to watchlist failed</string>
    <string name="anime_detail_error_update_list_status_failed">List status update failed</string>

    <!-- Anime rating -->
    <string name="anime_rating_none">No rating</string>
    <string name="anime_rating_one">1 - Appalling</string>
    <string name="anime_rating_two">2 - Horrible</string>
    <string name="anime_rating_three">3 - Very Bad</string>
    <string name="anime_rating_four">4 - Bad</string>
    <string name="anime_rating_five">5 - Average</string>
    <string name="anime_rating_six">6 - Fine</string>
    <string name="anime_rating_seven">7 - Good</string>
    <string name="anime_rating_eight">8 - Very Good</string>
    <string name="anime_rating_nine">9 - Great</string>
    <string name="anime_rating_ten">10 - Masterpiece</string>

    <!-- Watch statuses -->
    <string name="watch_status_completed">Completed</string>
    <string name="watch_status_dropped">Dropped</string>
    <string name="watch_status_on_hold">On Hold</string>
    <string name="watch_status_plan_to_watch">Plan to Watch</string>
    <string name="watch_status_watching">Watching</string>

    <!-- Anime search -->
    <string name="anime_search_hint">Search an anime…</string>
    <string name="anime_search_no_search">Search an anime to see its detail or add it to your watchlist</string>
    <string name="anime_search_no_search_result">No result. Try something else!</string>

    <!-- Edit anime list status -->
    <string name="edit_anime_list_status_title">Edit list status</string>
    <string name="edit_anime_list_status_watch_status_section">Watch status</string>
    <string name="edit_anime_list_status_episode_progress_section">Episodes watched</string>
    <plurals name="edit_anime_list_status_episode_progress">
        <item quantity="zero">%1$s/%2$s episode</item>
        <item quantity="one">%1$s/%2$s episode</item>
        <item quantity="other">%1$s/%2$s episodes</item>
    </plurals>
    <string name="edit_anime_list_status_add_episode">+1</string>
    <string name="edit_anime_list_status_remove_episode">-1</string>
    <string name="edit_anime_list_status_rating">Rating</string>
    <string name="edit_anime_list_status_apply">Apply</string>

</resources>
