<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:layout_gravity="bottom"
    tools:theme="@style/Theme.Watched">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_anime_list_status_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWatchStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit_anime_list_status_watch_status_section"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Spinner
        android:id="@+id/spWatchStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvWatchStatus" />

    <TextView
        android:id="@+id/tvEpisodeProgressTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit_anime_list_status_episode_progress_section"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintTop_toBottomOf="@id/spWatchStatus" />

    <Button
        android:id="@+id/btnRemoveEpisode"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:text="@string/edit_anime_list_status_remove_episode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEpisodeProgressTitle" />

    <TextView
        android:id="@+id/tvEpisodeProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/btnRemoveEpisode"
        app:layout_constraintStart_toEndOf="@id/btnRemoveEpisode"
        app:layout_constraintTop_toTopOf="@id/btnRemoveEpisode"
        tools:text="12/24 Eps" />

    <Button
        android:id="@+id/btnAddEpisode"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:minWidth="48dp"
        android:text="@string/edit_anime_list_status_add_episode"
        app:layout_constraintStart_toEndOf="@id/tvEpisodeProgress"
        app:layout_constraintTop_toTopOf="@id/btnRemoveEpisode" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit_anime_list_status_rating"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintTop_toBottomOf="@id/btnRemoveEpisode" />

    <Spinner
        android:id="@+id/spRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvRating" />

    <Button
        android:id="@+id/btnApplyChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_anime_list_status_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spRating" />

</androidx.constraintlayout.widget.ConstraintLayout>